--- a/NLP - Cypher - Graph - HTML.ipynb
+++ b/NLP - Cypher - Graph - HTML.ipynb
@@ -253,7 +253,7 @@
     "# Define the route for the home page\n",
     "@app.route('/')\n",
     "def home():\n",
-    "    return render_template('home.html')\n",
+    "    return render_template('index.html')\n",
     "\n",
     "\n",
     "\n",
